Compositing Tab - Blender does not make changes in real time #95699

Closed
opened 2022-02-11 11:54:51 +01:00 by Adrian Kulawik · 16 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-11 00:00, hash: 0263c8238b
Worked: (newest version of Blender that worked as expected)

Short description of error
Compositing Tab - ''Post Production'' like Color Balance don't work.

Exact steps for others to reproduce the error
When trying, for example, to change the parameter in color balance to a brighter one or the color should be updated in real time, in versions 3.1 and 3.2 the blender does not respond. Only moving zoom in - zoom out causes a change in post-production.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.1.0 Beta, branch: master, commit date: 2022-02-11 00:00, hash: `0263c8238b` Worked: (newest version of Blender that worked as expected) **Short description of error** Compositing Tab - ''Post Production'' like Color Balance don't work. **Exact steps for others to reproduce the error** When trying, for example, to change the parameter in color balance to a brighter one or the color should be updated in real time, in versions 3.1 and 3.2 the blender does not respond. Only moving zoom in - zoom out causes a change in post-production.
Author

Added subscriber: @Adrian1819

Added subscriber: @Adrian1819

#95764 was marked as duplicate of this issue

#95764 was marked as duplicate of this issue
Member

Added subscriber: @wannes.malfait

Added subscriber: @wannes.malfait
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I was not able to reproduce this. I just rendered the default scene and opened the compositing tab. There I checked Use Nodes added a color balance node and a viewer node. Changing any of the values of the color balance node updated the backdrop.

Please provide a more detailed description or attach a blend file where the problem occurs.

I was not able to reproduce this. I just rendered the default scene and opened the compositing tab. There I checked `Use Nodes` added a color balance node and a viewer node. Changing any of the values of the color balance node updated the backdrop. Please provide a more detailed description or attach a blend file where the problem occurs.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2022-02-11 15:18:11 +01:00
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Thanks for reporting Can confirm.

Cause: New drawing method doesn't see the new image as being different as the image being displayed. Related to the new image engine.

Thanks for reporting Can confirm. Cause: New drawing method doesn't see the new image as being different as the image being displayed. Related to the new image engine.
Member

Mark as high as it is a regression that needs to be fixed before release.

Mark as high as it is a regression that needs to be fixed before release.

Added subscriber: @frogstomp-4

Added subscriber: @frogstomp-4

Not sure if related but material assignment also updates only when exiting edit mode on 3.2

Not sure if related but material assignment also updates only when exiting edit mode on 3.2
Member

@frogstomp-4 can you open a new ticket for that case. It doesn’t seem to be related.

@frogstomp-4 can you open a new ticket for that case. It doesn’t seem to be related.
Member

Added subscriber: @zazizizou

Added subscriber: @zazizizou

This issue was referenced by f0e32ef4ff

This issue was referenced by f0e32ef4ff34f8cf8ff85706fd863a858f5849b6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Member

Added subscribers: @Renderbicks, @Alaska

Added subscribers: @Renderbicks, @Alaska
Thomas Dinges added this to the 3.1 milestone 2023-02-08 15:52:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95699
No description provided.