source/blender/compositor/operations/COM_ViewerOperation.cc
@@ -215,7 +215,10 @@ void ViewerOperation::update_image(const rcti *rect)
                                     rect->ymin,
                                     rect->xmax,
                                     rect->ymax);
-  image_->gpuflag |= IMA_GPU_REFRESH;
+
+  /* This could be improved to use partial updates. For now disabled as the full frame compositor
+   * would not use partial frames anymore and the image engine requires more testing.*/
+  BKE_image_partial_update_mark_full_update(image_);
   this->update_draw();
 }
 
